--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
     ></script>
   </head>
   <body>
+    <!-- ================== Header Area ================== -->
     <header class="main-header">
       <div class="container">
-        <a href="/" class="logo"
+        <a href="/" class="logo Archivo"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -63,8 +64,7 @@
               </g>
             </g>
           </svg>
-          Race across the
-          <br />peaks</a
+          Race across <br />the peaks</a
         >
         <div class="menu-wrap">
           <a href="/">About the race</a>
@@ -75,6 +75,110 @@
         </div>
       </div>
     </header>
+    <!-- ================== Header Area ================== -->
+
+    <!-- ================== Home Hero Area ================== -->
+    <section
+      class="home-hero"
+      style="background-image: url(/assets/hero-bg.jpg)"
+    >
+      <div class="container">
+        <div class="logo">
+          <img src="/assets/cc-logo.png" alt="cc-logo" />
+        </div>
+        <h1 class="headline">RACE ACROSS THE PEAKS</h1>
+        <div class="contents">
+          Join fellow explorers, adventurers, and supporters of scientific
+          research, conservation, and community aid for an unforgettable
+          challenge across the Yorkshire Three Peaks. This 24.6-mile endurance
+          event raises vital funds for the Scientific Exploration Society,
+          helping to support pioneering expeditions and meaningful projects
+          around the world. Take on the Peaks, push your limits, and make a real
+          impact.
+        </div>
+        <a href="/" class="btn">Register</a>
+      </div>
+    </section>
+    <!-- ================== Home Hero Area ================== -->
+
+    <!-- ================== Footer Area ================== -->
+    <footer class="main-footer">
+      <div class="container">
+        <div class="left">
+          <a href="/" class="logo Archivo"
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              width="51.171"
+              height="52.753"
+              viewBox="0 0 51.171 52.753"
+            >
+              <defs>
+                <clipPath id="clip-path">
+                  <rect
+                    id="Rectangle_103"
+                    data-name="Rectangle 103"
+                    width="51.171"
+                    height="52.753"
+                    transform="translate(0 0)"
+                    fill="none"
+                  />
+                </clipPath>
+              </defs>
+              <g
+                id="Group_113"
+                data-name="Group 113"
+                transform="translate(0 0)"
+              >
+                <g
+                  id="Group_112"
+                  data-name="Group 112"
+                  clip-path="url(#clip-path)"
+                >
+                  <path
+                    id="Path_61"
+                    data-name="Path 61"
+                    d="M25.476,45.357c2.458.934,4.913,1.751,7.4,2.8.062.029.014,0-.016-.006-.061-.008.005,0,.04.008l.229.034.458.068.229.035.114.017c.05.006-.04-.005-.053,0s-.1.018-.057.007a9.172,9.172,0,0,1,1.174-.3,1.323,1.323,0,0,1,1.337.694l.906,1.615a.377.377,0,0,0-.505-.148,3.716,3.716,0,0,1,1.792-.6l.229-.033.119-.018a1.366,1.366,0,0,1,1.171.444l.173.154.054.049a.4.4,0,0,0-.336-.083c-.032.008.027-.008-.014,0a.445.445,0,0,0-.094.043c-.035.035-.088.06-.113.106l.031-.045c.168-.243.254-.389.445-.641a3.077,3.077,0,0,1,.526-.423,2.731,2.731,0,0,1,.873-.508c.572-.121,1.512-.264,2.048-.386.726-.2,1.747-.421,2.474-.612.569-.074,1.68-.132,2.228-.176l.462-.033a.5.5,0,0,0-.381.245c-.066.145.005-.027.019-.077.154-.421.671-1.952.834-2.4a.545.545,0,0,0-.021.217.478.478,0,0,0,.033.13c0,.013.028.06.019.042l-.028-.05c-.154-.3-.4-.717-.559-1.013-.309-.368-.147-2.04-.2-2.505a.555.555,0,0,0,.419.523c.047.012.121.017.047.012l-.231-.015-.926-.06c-.933-.062-2.772-.18-3.7-.253l-.926-.071c-.116-.012-.285-.019-.394-.032a3.334,3.334,0,0,1-.834-.3l-3.389-1.491-1.695-.746c-.176-.079-.485-.212-.647-.285a1.634,1.634,0,0,1-.915-1.605c.008-.536-.092-3.953-.035-4.49.054-.258.1-.656.155-.916.009-.043.014-.1,0,.007a.827.827,0,0,0,.129.489l-.073-.09c-.645-.81-1.836-2.246-2.52-3.026-.414-.508-.994-.938-1.085-1.64-.011-.1-.124-.483-.142-.588l.985,1.2L32.4,28.5l-.012,0-.371-.141-.163-.186c-.382-.442-1.065-1.211-1.455-1.629-.037-.059-.257-.231.02-.037.076.035.015,0,0-.007-.564-.353-1.5-.885-2.073-1.24l.156.065c-.135-.063-.511-.194-.637-.256-.544-.1-2.131-.42-2.987-.654-.038-.009.015,0,.03,0-.081,0-.378-.054-.5-.064a.656.656,0,0,0,.195-.043.462.462,0,0,0,.1-.059,2.97,2.97,0,0,1-3.59-.168c-2.266-2.147-4.556-4.127-6.779-6.266-.158-.076-1.869-.924-2.008-1.035-.46-.442-.8-.869-1.211-1.311a1.422,1.422,0,0,1-.505-1.254c.264-1.387.883-4.4,1.152-5.789L11.8,8.2l.023-.115c-.011.064,0,.006,0-.034.063-.615.14-1.489.2-2.1a.419.419,0,0,0,.028.18L10.411,2.8l-.105-.21-.052-.105c-.019-.041-.043-.084-.01-.024a.448.448,0,0,0,.161.154c.067.032-.03-.011-.049-.018l-.108-.045c-.479-.181-1.367-.573-1.847-.76a.611.611,0,0,0,.2.042l-.117.011c-.844.081-2.6.243-3.331.314a.55.55,0,0,0,.138-.036c.079-.037-.018.012-.035.022-.333.158-.977.547-1.312.713a.574.574,0,0,0,.234-.239c-.015.038-.071.144-.089.185-.1.246-.494,1.011-.607,1.272.1-.3.005.058,0,.166-.168,1.216-.5,2.869-.527,4.091-.088,1.71-.226,4.755-.311,6.422a.83.83,0,0,0-.021-.289c.165.476.761,2.062.941,2.571.09.237.29.8.178.452l.285.363a1.009,1.009,0,0,0-.185-.2,1.088,1.088,0,0,0-.112-.08c-.043-.027-.091-.051-.05-.031l.233.1.673.305c.073.317.86,5.09.955,5.564.048.214.11.691.153.894a1.054,1.054,0,0,0-.25-.52c.479.557,1.1,1.071,1.133,1.89a5.3,5.3,0,0,1-.111,1.647c-.339,1.045-.784,2.229-1.174,3.251-.034.088.007-.02.01-.035a1.051,1.051,0,0,0-.037-.7,1.092,1.092,0,0,0-.255-.368c0-.006-.087-.074-.013-.012a2.724,2.724,0,0,1,.772,1.764l.243,1.191L6.49,34.9l.117.6c.006.029.027.145.022.1a.832.832,0,0,0-.1-.254l.014.027.142.268c.188.364.672,1.259.854,1.609-.017.111-.218.711-.243.833l-.079.272L7.1,38.5a7.413,7.413,0,0,1-1.056,1.214l-.549.359a.877.877,0,0,0-.506-1.521c-.213-.03-.482.108-.293.035.392-.151,1.2-.459,1.6-.279.186.039.742.214.938.26l1.173.325c.357.087.886.142,1.227.254,1.617.835,3.957,2.182,5.551,3.053.324.086.907-.016,1.162.337.267.433.461.759.69,1.167.1.19.089.168.365.239.8.2,2.944.731,3.768.937l-.046.212-2.544-.475-1.272-.237A.919.919,0,0,1,16.6,44l-.405-.507c-.15-.151-.293-.458-.427-.456-.21.007-.41.045-.65.046a5.886,5.886,0,0,1-1.069-.35c-1.282-.486-3.73-1.371-5.018-1.842l-.037-.013.04.019c.2.055-.109.013-.21.017l-.648-.024c-.562-.072-1.773-.2-2.335-.27-.118-.018.069.023.135.015a.755.755,0,0,0,.273-.055l-.623.333A1.75,1.75,0,0,1,3.57,38.179c.247-.261.532-.5.791-.733a.951.951,0,0,0-.222.216l.157-.276.321-.564-.2.42.006-.021.066-.228.115,1.122c-.109-.189-.613-1.169-.71-1.339a4.7,4.7,0,0,1-.35-1.3c-.222-1.131-.619-3.118-.848-4.228a1.137,1.137,0,0,0,.342.577c.054.046-.047-.039-.07-.063a1.949,1.949,0,0,1-.539-1.974c.368-1.011.823-2.17,1.155-3.2.006.458,0-.517,0-.608a1.081,1.081,0,0,0,.256.621l-.2-.227a6.853,6.853,0,0,1-.679-.833,5.008,5.008,0,0,1-.376-1.521l-.821-4.781.808,1.088a3.852,3.852,0,0,1-.584-.357,3.028,3.028,0,0,1-.614-.767,2.23,2.23,0,0,1-.329-.621c-.174-.57-.539-1.906-.709-2.467l-.288-.98a1.736,1.736,0,0,1-.044-.613C.063,13.919.234,12.5.292,11.9c.111-.746.427-4.2.526-4.889.148-.824.437-2.294.587-3.117a4.545,4.545,0,0,1,.641-1.581c.245-.415.43-1,.906-1.215C3.375.866,4.1.528,4.524.314A6.025,6.025,0,0,1,6,.147L7.879.038,8.348.011a2.012,2.012,0,0,1,.443.006,9.127,9.127,0,0,1,1.3.537c.52.287,1.318.447,1.629.985.122.215.155.311.25.5l1.648,3.433a1.307,1.307,0,0,1,.09.641c-.081.72-.162,1.576-.254,2.3-.156.809-.872,4.065-1.047,4.942l-.194.919-.043.2a.359.359,0,0,0-.019-.181c-.128-.2.04.026.136.123.232.269.716.806.933,1.057.227.219-.127-.052.139.111l1.668.865a1.837,1.837,0,0,1,.381.277l.162.163c2.1,2.049,4.425,4,6.615,5.888a1.137,1.137,0,0,0,1.264.093,2.422,2.422,0,0,1,.464-.285A1.827,1.827,0,0,1,24.8,22.5c.564.008,1.349.226,1.911.268.586.075,1.183.075,1.808.2.167.045.526.157.7.2.123.033,1.159.506,1.3.555.362.166.878.355,1.21.529.693.488.661.532,1.21.965L33.92,26l-.534-.328c.287.086,1,.363,1.282.452.031.374.069,1.093.084,1.458a.968.968,0,0,0-.207-.443c.406.577,1.192,1.823,1.624,2.4l1.089,1.5a1.863,1.863,0,0,1,.508,1.649c-.059.256-.114.651-.17.907.016-.045.009-.178.01-.093l-.018,3.7,0,.463v.116c0,.032,0,.115,0,.014a.683.683,0,0,0-.394-.551l.2.093.42.194c1.158.544,4.786,2.2,5.343,2.478,1.427.142,3.4.313,4.832.431a5.958,5.958,0,0,1,1.777.273,1.443,1.443,0,0,1,.748,1.223l-.016,1.876a.544.544,0,0,0-.059-.236l.108.205a5.476,5.476,0,0,1,.62,1.37c.109.583-.585,1.878-.719,2.409-.151.394-.186.558-.389,1.006a1.634,1.634,0,0,1-1.6.728l-1.849.1c-.056,0-.228.021-.079,0-.092.027-.563.124-.675.154-1.221.294-2.671.592-3.858.757a.459.459,0,0,0,.1-.039c.011-.006.042-.027.034-.022-.155.1-.468.324-.62.426l-.1.065a.43.43,0,0,0,.072-.067c-.145.194-.332.494-.492.677a1.316,1.316,0,0,1-1.9.021l-.17-.158-.085-.078c-.024-.024-.077-.07-.027-.029a.38.38,0,0,0,.284.071l-.11.015-.23.031-.458.063c-.265.047.019-.03-.239.065a1.8,1.8,0,0,0-.327.162,1.308,1.308,0,0,1-1.923-.38l-.9-1.62-.028-.051a.367.367,0,0,0,.26.178c.149.011-.093,0-.051.007.017.007.1-.022.056-.011l-.111.031a8.124,8.124,0,0,1-1.065.265,3.04,3.04,0,0,1-.627-.069c-.305-.065-.565-.068-.872-.145-2.444-1-5.008-1.923-7.543-2.877l.547-1.472"
+                    fill="#fff"
+                  />
+                  <path
+                    id="Path_62"
+                    data-name="Path 62"
+                    d="M30.574,43.543a42.874,42.874,0,0,1-5.225,2.8,36.237,36.237,0,0,1,2.536,5.612.6.6,0,0,1-1.065.543,45.185,45.185,0,0,1-3.178-5.487,1.791,1.791,0,0,1,.657-2.173,33.891,33.891,0,0,1,5.973-2,.4.4,0,0,1,.3.712"
+                    fill="#fff"
+                  />
+                </g>
+              </g>
+            </svg>
+            Race across <br />the peaks</a
+          >
+          <img
+            src="/assets/Executive-Assistant-to-the-CEO-Job-Description.png"
+            alt=""
+            class="logo2"
+          />
+          <img src="/assets/RUK copy.png" alt="" class="logo3" />
+        </div>
+        <div class="right">
+          <div class="item">
+            <h5>Contact</h5>
+            <p>challenge@ses-explore.org</p>
+            <p>
+              Lorem ipsum is placeholder text commonly used in the graphic,
+              print, and publishing
+            </p>
+          </div>
+          <div class="item">
+            <h5>Footer</h5>
+            <p>
+              Lorem ipsum is placeholder text commonly used in the graphic,
+              print, and publishing
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- ================== Footer Area ================== -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
       integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
