--- a/index.html
+++ b/index.html
@@ -228,6 +228,191 @@
     </section>
     <!-- ================== Award Area ================== -->
 
+    <!-- ================== How to Enter ================== -->
+    <section
+      class="how-to-enter"
+      style="background-image: url(/assets/how-to-enter-bg.jpg)"
+    >
+      <div class="container">
+        <h2 class="headline">How to enter</h2>
+        <div class="how-to-enter-grid">
+          <div class="item">
+            <div class="count">1</div>
+            <h4 class="title">Register</h4>
+            <div class="price">
+              Entry <br />
+              fee: <span>£50</span>
+            </div>
+            <p>Complete our registration form and set your fundraising goal.</p>
+            <a class="btn" href="#">Register</a>
+          </div>
+          <div class="item">
+            <div class="count">2</div>
+            <h4 class="title">Fundraise</h4>
+            <div class="price">
+              Minimum <br />
+              sponsorship: <span>£300</span>
+            </div>
+            <p>
+              Set up your fundraising page and raise a minimum of £300 for SES.
+            </p>
+            <a class="btn" href="#">Register</a>
+          </div>
+          <div class="item">
+            <div class="count">3</div>
+            <h4 class="title">Check eligibility</h4>
+            <div class="contents">
+              <p>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="17.842"
+                  height="15.98"
+                  viewBox="0 0 17.842 15.98"
+                >
+                  <path
+                    id="np_tick_7996563_000000"
+                    d="M20.192,7.9a.962.962,0,0,0-1.327-.3,34.905,34.905,0,0,0-3.678,2.665,33.988,33.988,0,0,0-6.1,6.775c-.4.572-.792,1.145-1.175,1.715Q6.065,16.595,4.2,14.446a.966.966,0,0,0-1.561,1.121c1.357,2.331,2.693,4.684,4.007,7.039a1.65,1.65,0,0,0,2.858.012c.758-1.33,1.453-2.645,2.183-3.9a31.225,31.225,0,0,1,5.061-6.738,32.754,32.754,0,0,1,3.208-2.787.962.962,0,0,0,.24-1.288Z"
+                    transform="translate(-2.499 -7.457)"
+                  />
+                </svg>
+                Solo entrants must be 18+
+              </p>
+              <p>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="17.842"
+                  height="15.98"
+                  viewBox="0 0 17.842 15.98"
+                >
+                  <path
+                    id="np_tick_7996563_000000"
+                    d="M20.192,7.9a.962.962,0,0,0-1.327-.3,34.905,34.905,0,0,0-3.678,2.665,33.988,33.988,0,0,0-6.1,6.775c-.4.572-.792,1.145-1.175,1.715Q6.065,16.595,4.2,14.446a.966.966,0,0,0-1.561,1.121c1.357,2.331,2.693,4.684,4.007,7.039a1.65,1.65,0,0,0,2.858.012c.758-1.33,1.453-2.645,2.183-3.9a31.225,31.225,0,0,1,5.061-6.738,32.754,32.754,0,0,1,3.208-2.787.962.962,0,0,0,.24-1.288Z"
+                    transform="translate(-2.499 -7.457)"
+                  />
+                </svg>
+                Team members 15–75 with at least one adult (18+).
+              </p>
+            </div>
+            <a class="btn" href="#">See full criteria</a>
+          </div>
+          <div class="item">
+            <div class="count">4</div>
+            <h4 class="title">Get the right kit</h4>
+            <p>
+              Lorem ipsum is placeholder text commonly used in the graphic,
+              print, and publishing industries for previewing layouts and visual
+              mockups.
+            </p>
+            <a class="btn" href="#">See kitlist</a>
+          </div>
+          <div class="item">
+            <div class="count">5</div>
+            <h4 class="title">Book accomodation</h4>
+            <p>
+              Lorem ipsum is placeholder text commonly used in the graphic,
+              print, and publishing industries for previewing layouts and visual
+              mockups.
+            </p>
+            <a class="btn" href="#">Accomodation list</a>
+          </div>
+          <div class="item">
+            <div class="count">6</div>
+            <h4 class="title">Disclosure form</h4>
+            <p>
+              Lorem ipsum is placeholder text commonly used in the graphic,
+              print, and publishing industries for previewing layouts and visual
+              mockups.
+            </p>
+            <a class="btn" href="#">Download</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ================== How to Enter ================== -->
+
+    <!-- ================== Black CTA ================== -->
+    <section class="have-questions">
+      <div class="container">
+        <div class="left">
+          <img src="/assets/cta-image.jpg" alt="cta-image" />
+        </div>
+        <div class="right">
+          <h3>Still have questions?</h3>
+          <div class="contents-wrap">
+            <p>
+              Still have questions? Visit our FAQ <br />
+              page to find out more.
+            </p>
+          </div>
+          <a href="#" class="btn">See FAQ’s</a>
+        </div>
+      </div>
+    </section>
+    <!-- ================== Black CTA ================== -->
+
+    <!-- ================== Left Image Right Contents ================== -->
+    <section class="left-image-contents">
+      <div class="container">
+        <div class="left">
+          <div class="image-wrap">
+            <img src="/assets/about-ses.jpg" alt="about-ses" />
+          </div>
+        </div>
+        <div class="right">
+          <h2>About SES</h2>
+          <div class="contents">
+            <p>
+              Scientific Exploration Society (SES) is a UK charity (No. 267410)
+              founded in 1969 by Colonel John Blashford-Snell CBE to support
+              scientific exploration and conservation. The Society has conducted
+              over 200 expeditions worldwide, including the youth-focused
+              Operations Drake and Raleigh. Today, SES continues to champion
+              climate research, environmental protection, and community
+              collaboration by providing funding, mentoring, training, and
+              endorsement for field expeditions. Members enjoy talks, events,
+              and opportunities to join SES-endorsed projects. Its Advisory
+              Board includes leading explorers such as Sir Ranulph Fiennes, Bear
+              Grylls, Steve Backshall, Tim Peake, and others.
+            </p>
+          </div>
+          <div class="btns-wrap">
+            <a href="#" class="btn">Read more</a>
+            <a href="https://ses-explore.org/" target="_blank" class="link"
+              >SES website ses-explore.org</a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ================== Left Image Right Contents ================== -->
+    <!-- ================== Left Image Right Contents ================== -->
+    <section class="left-image-contents why-involved">
+      <div class="container">
+        <div class="left">
+          <h2>Why get involved?</h2>
+          <div class="contents">
+            <p>
+              By taking part in the SES charity challenge, you’ll push yourself
+              in an inspiring adventure while directly supporting vital
+              scientific exploration, conservation, and community aid around the
+              world. It’s a chance to test your endurance, connect with
+              like-minded people, and make a meaningful contribution to
+              protecting our planet and improving lives.
+            </p>
+          </div>
+          <div class="btns-wrap">
+            <a href="#" class="btn">Read more</a>
+          </div>
+        </div>
+        <div class="right">
+          <div class="image-wrap">
+            <img src="/assets/why-involve.jpg" alt="why-involve" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ================== Left Image Right Contents ================== -->
+
     <!-- ================== Footer Area ================== -->
     <footer class="main-footer">
       <div class="container">
@@ -306,9 +491,7 @@
       </div>
     </footer>
     <!-- ================== Footer Area ================== -->
-    wp_enqueue_script( 'smoothscroll',
-    '//cdn.jsdelivr.net/npm/smoothscroll-for-websites@1.4.10/SmoothScroll.min.js',
-    array(), null, true );
+    <script src="//cdn.jsdelivr.net/npm/smoothscroll-for-websites@1.4.10/SmoothScroll.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
       integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
