--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Race Across The Peaks - KitList</title>
+    <title>Race Across The Peaks - FAQs</title>
     <link rel="stylesheet" href="/style.css" />
     <link
       rel="stylesheet"
@@ -67,7 +67,7 @@
           Race across <br />the peaks</a
         >
         <div class="menu-wrap">
-          <a href="/">About the race</a>
+          <a href="/about-race.html">About the race</a>
           <a href="/kitlist.html">Kit list</a>
           <a href="/faq.html">FAQ</a>
           <a href="/">Get in touch</a>
