--- a/about-race.html
+++ b/about-race.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Race Across The Peaks</title>
+    <title>Race Across The Peaks - About The Race</title>
     <link rel="stylesheet" href="/style.css" />
     <link
       rel="stylesheet"
@@ -70,71 +70,54 @@
           <a href="/about-race.html">About the race</a>
           <a href="/kitlist.html">Kit list</a>
           <a href="/faq.html">FAQ</a>
-          <a href="/register.html">Get in touch</a>
-          <a href="/register.html" class="btn">Register</a>
+          <a href="/">Get in touch</a>
+          <a href="/" class="btn">Register</a>
         </div>
       </div>
     </header>
     <!-- ================== Header Area ================== -->
 
-    <!-- ================== Home Hero Area ================== -->
-    <section
-      class="home-hero"
-      style="background-image: url(/assets/hero-bg.jpg)"
-    >
+    <!-- ================== FAQs ================== -->
+    <section class="inner-hero">
       <div class="container">
-        <div class="logo">
-          <img src="/assets/cc-logo.png" alt="cc-logo" />
-        </div>
-        <h1 class="headline">RACE ACROSS THE PEAKS</h1>
-        <div class="contents">
-          Join fellow explorers, adventurers, and supporters of scientific
-          research, conservation, and community aid for an unforgettable
-          challenge across the Yorkshire Three Peaks. This 24.6-mile endurance
-          event raises vital funds for the Scientific Exploration Society,
-          helping to support pioneering expeditions and meaningful projects
-          around the world. Take on the Peaks, push your limits, and make a real
-          impact.
-        </div>
-        <a href="/register.html" class="btn">Register</a>
-      </div>
-    </section>
-    <!-- ================== Home Hero Area ================== -->
-
-    <!-- ================== Time Area ================== -->
-    <section class="timer">
-      <div class="container">
-        <div class="left">
-          Race day:
-          <div class="date">12/09/2026</div>
-        </div>
-        <div class="right">
+        <div class="inner">
+          <h2 class="headline">About the race</h2>
+          <div class="line"></div>
+          <h4 class="sub-headline">
+            Race Across the Peaks is an exciting new endurance challenge taking
+            place across the iconic Yorkshire Three Peaks. Individuals and teams
+            will take on this gruelling route to raise vital funds for the
+            Scientific Exploration Society (SES) — a remarkable charitythat
+            supports and inspires the next generation of scientific explorers
+            and adventurers.
+          </h4>
           <p>
-            Time until <br />
-            the race:
+            Since its founding in 1969 by Colonel John Blashford-Snell, one of
+            the UK’s most renowned explorers, SES has championed global
+            scientific and environmental exploration. The Society provides
+            grants for research and conservation expeditions around the world
+            and funds the SES–Raleigh Explorer Bursary Award, which gives
+            underserved young people aged 18–25 the chance to join fully funded
+            Raleigh expeditions in extraordinary places such as Costa Rica,
+            South Africa, and Borneo.
           </p>
-          <div class="countdown" data-timer="12/09/2026 5:30:00 AM">
-            <div class="item">
-              <span id="days"></span><br />
-              <span class="text">Days</span>
-            </div>
-            <div class="item">
-              <span id="hours"></span><br />
-              <span class="text">Hours</span>
-            </div>
-            <div class="item">
-              <span id="minutes"></span><br />
-              <span class="text">Minutes</span>
-            </div>
-            <div class="item">
-              <span id="seconds"></span><br />
-              <span class="text">Seconds</span>
-            </div>
-          </div>
+          <p>
+            With the recent appointment of a Royal Patron, SES is entering an
+            exciting new chapter — deepening its commitment to discovery,
+            sustainability, and education. Over the years, its work has helped
+            protect endangered species, preserve indigenous knowledge, and
+            conserve fragile ecosystems.
+          </p>
+          <p>
+            The Yorkshire Three Peaks route covers 24 miles and includes over
+            5,200 feet of ascent — a true test of endurance, determination, and
+            teamwork. It’s not for the faint-hearted, but the rewards are
+            immense.
+          </p>
         </div>
       </div>
     </section>
-    <!-- ================== Time Area ================== -->
+    <!-- ================== FAQs ================== -->
 
     <!-- ================== Map Area ================== -->
     <section class="map-area">
@@ -176,242 +159,11 @@
     </section>
     <!-- ================== Map Area ================== -->
 
-    <!-- ================== Award Area ================== -->
-    <section class="award">
-      <div class="container">
-        <h2 class="headline">Award categories</h2>
-        <div class="award-grid">
-          <div class="item">
-            <div class="logo">
-              <img src="/assets/team-4.svg" alt="team-4" />
-            </div>
-            <div class="title">Team of 4</div>
-            <div class="wrap">
-              <img src="/assets/clock.svg" alt="" />
-              Fastest Team of 4
-            </div>
-            <div class="wrap">
-              <img src="/assets/euro.svg" alt="" />
-              Team that raised the most
-            </div>
-          </div>
-          <div class="item">
-            <div class="logo">
-              <img src="/assets/solo-female.svg" alt="solo-female" />
-            </div>
-            <div class="title">Solo female</div>
-            <div class="wrap">
-              <img src="/assets/clock.svg" alt="" />
-              Fastest solo female
-            </div>
-            <div class="wrap">
-              <img src="/assets/euro.svg" alt="" />
-              Fastest solo female that raised the most
-            </div>
-          </div>
-          <div class="item">
-            <div class="logo">
-              <img src="/assets/solo-male.svg" alt="solo-male" />
-            </div>
-            <div class="title">Solo male</div>
-            <div class="wrap">
-              <img src="/assets/clock.svg" alt="" />
-              Fastest solo male
-            </div>
-            <div class="wrap">
-              <img src="/assets/euro.svg" alt="" />
-              Fastest solo male that raised the most
-            </div>
-          </div>
-        </div>
-      </div>
+    <!-- ================== Full Image ================== -->
+    <section class="full-image">
+      <img src="/assets/full-image.jpg" alt="" />
     </section>
-    <!-- ================== Award Area ================== -->
-
-    <!-- ================== How to Enter ================== -->
-    <section
-      class="how-to-enter"
-      style="background-image: url(/assets/how-to-enter-bg.jpg)"
-    >
-      <div class="container">
-        <h2 class="headline">How to enter</h2>
-        <div class="how-to-enter-grid">
-          <div class="item">
-            <div class="count">1</div>
-            <h4 class="title">Register</h4>
-            <div class="price">
-              Entry <br />
-              fee: <span>£50</span>
-            </div>
-            <p>Complete our registration form and set your fundraising goal.</p>
-            <a class="btn" href="/register.html">Register</a>
-          </div>
-          <div class="item">
-            <div class="count">2</div>
-            <h4 class="title">Fundraise</h4>
-            <div class="price">
-              Minimum <br />
-              sponsorship: <span>£300</span>
-            </div>
-            <p>
-              Set up your fundraising page and raise a minimum of £300 for SES.
-            </p>
-            <a class="btn" href="/register.html">Register</a>
-          </div>
-          <div class="item">
-            <div class="count">3</div>
-            <h4 class="title">Check eligibility</h4>
-            <div class="contents">
-              <p>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="17.842"
-                  height="15.98"
-                  viewBox="0 0 17.842 15.98"
-                >
-                  <path
-                    id="np_tick_7996563_000000"
-                    d="M20.192,7.9a.962.962,0,0,0-1.327-.3,34.905,34.905,0,0,0-3.678,2.665,33.988,33.988,0,0,0-6.1,6.775c-.4.572-.792,1.145-1.175,1.715Q6.065,16.595,4.2,14.446a.966.966,0,0,0-1.561,1.121c1.357,2.331,2.693,4.684,4.007,7.039a1.65,1.65,0,0,0,2.858.012c.758-1.33,1.453-2.645,2.183-3.9a31.225,31.225,0,0,1,5.061-6.738,32.754,32.754,0,0,1,3.208-2.787.962.962,0,0,0,.24-1.288Z"
-                    transform="translate(-2.499 -7.457)"
-                  />
-                </svg>
-                Solo entrants must be 18+
-              </p>
-              <p>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="17.842"
-                  height="15.98"
-                  viewBox="0 0 17.842 15.98"
-                >
-                  <path
-                    id="np_tick_7996563_000000"
-                    d="M20.192,7.9a.962.962,0,0,0-1.327-.3,34.905,34.905,0,0,0-3.678,2.665,33.988,33.988,0,0,0-6.1,6.775c-.4.572-.792,1.145-1.175,1.715Q6.065,16.595,4.2,14.446a.966.966,0,0,0-1.561,1.121c1.357,2.331,2.693,4.684,4.007,7.039a1.65,1.65,0,0,0,2.858.012c.758-1.33,1.453-2.645,2.183-3.9a31.225,31.225,0,0,1,5.061-6.738,32.754,32.754,0,0,1,3.208-2.787.962.962,0,0,0,.24-1.288Z"
-                    transform="translate(-2.499 -7.457)"
-                  />
-                </svg>
-                Team members 15–75 with at least one adult (18+).
-              </p>
-            </div>
-            <a class="btn" href="#">See full criteria</a>
-          </div>
-          <div class="item">
-            <div class="count">4</div>
-            <h4 class="title">Get the right kit</h4>
-            <p>
-              Lorem ipsum is placeholder text commonly used in the graphic,
-              print, and publishing industries for previewing layouts and visual
-              mockups.
-            </p>
-            <a class="btn" href="/kitlist.html">See kitlist</a>
-          </div>
-          <div class="item">
-            <div class="count">5</div>
-            <h4 class="title">Book accomodation</h4>
-            <p>
-              Lorem ipsum is placeholder text commonly used in the graphic,
-              print, and publishing industries for previewing layouts and visual
-              mockups.
-            </p>
-            <a class="btn" href="#">Accomodation list</a>
-          </div>
-          <div class="item">
-            <div class="count">6</div>
-            <h4 class="title">Disclosure form</h4>
-            <p>
-              Lorem ipsum is placeholder text commonly used in the graphic,
-              print, and publishing industries for previewing layouts and visual
-              mockups.
-            </p>
-            <a class="btn" href="#">Download</a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ================== How to Enter ================== -->
-
-    <!-- ================== Black CTA ================== -->
-    <section class="have-questions">
-      <div class="container">
-        <div class="left">
-          <img src="/assets/cta-image.jpg" alt="cta-image" />
-        </div>
-        <div class="right">
-          <h3>Still have questions?</h3>
-          <div class="contents-wrap">
-            <p>
-              Still have questions? Visit our FAQ <br />
-              page to find out more.
-            </p>
-          </div>
-          <a href="/faq.html" class="btn">See FAQ’s</a>
-        </div>
-      </div>
-    </section>
-    <!-- ================== Black CTA ================== -->
-
-    <!-- ================== Left Image Right Contents ================== -->
-    <section class="left-image-contents">
-      <div class="container">
-        <div class="left">
-          <div class="image-wrap">
-            <img src="/assets/about-ses.jpg" alt="about-ses" />
-          </div>
-        </div>
-        <div class="right">
-          <h2>About SES</h2>
-          <div class="contents">
-            <p>
-              Scientific Exploration Society (SES) is a UK charity (No. 267410)
-              founded in 1969 by Colonel John Blashford-Snell CBE to support
-              scientific exploration and conservation. The Society has conducted
-              over 200 expeditions worldwide, including the youth-focused
-              Operations Drake and Raleigh. Today, SES continues to champion
-              climate research, environmental protection, and community
-              collaboration by providing funding, mentoring, training, and
-              endorsement for field expeditions. Members enjoy talks, events,
-              and opportunities to join SES-endorsed projects. Its Advisory
-              Board includes leading explorers such as Sir Ranulph Fiennes, Bear
-              Grylls, Steve Backshall, Tim Peake, and others.
-            </p>
-          </div>
-          <div class="btns-wrap">
-            <a href="/about-ses.html" class="btn">Read more</a>
-            <a href="https://ses-explore.org/" target="_blank" class="link"
-              >SES website ses-explore.org</a
-            >
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ================== Left Image Right Contents ================== -->
-    <!-- ================== Left Image Right Contents ================== -->
-    <section class="left-image-contents why-involved">
-      <div class="container">
-        <div class="left">
-          <h2>Why get involved?</h2>
-          <div class="contents">
-            <p>
-              By taking part in the SES charity challenge, you’ll push yourself
-              in an inspiring adventure while directly supporting vital
-              scientific exploration, conservation, and community aid around the
-              world. It’s a chance to test your endurance, connect with
-              like-minded people, and make a meaningful contribution to
-              protecting our planet and improving lives.
-            </p>
-          </div>
-          <div class="btns-wrap">
-            <a href="#" class="btn">Read more</a>
-          </div>
-        </div>
-        <div class="right">
-          <div class="image-wrap">
-            <img src="/assets/why-involve.jpg" alt="why-involve" />
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ================== Left Image Right Contents ================== -->
+    <!-- ================== Full Image ================== -->
 
     <!-- ================== Footer Area ================== -->
     <footer class="main-footer">
