--- a/the-route.html
+++ b/the-route.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Race Across The Peaks</title>
+    <title>Race Across The Peaks - The Route</title>
     <link rel="stylesheet" href="/style.css" />
     <link
       rel="stylesheet"
@@ -70,71 +70,44 @@
           <a href="/about-race.html">About the race</a>
           <a href="/kitlist.html">Kit list</a>
           <a href="/faq.html">FAQ</a>
-          <a href="/register.html">Get in touch</a>
-          <a href="/register.html" class="btn">Register</a>
+          <a href="/">Get in touch</a>
+          <a href="/" class="btn">Register</a>
         </div>
       </div>
     </header>
     <!-- ================== Header Area ================== -->
 
-    <!-- ================== Home Hero Area ================== -->
-    <section
-      class="home-hero"
-      style="background-image: url(/assets/hero-bg.jpg)"
-    >
+    <!-- ================== FAQs ================== -->
+    <section class="inner-hero">
       <div class="container">
-        <div class="logo">
-          <img src="/assets/cc-logo.png" alt="cc-logo" />
-        </div>
-        <h1 class="headline">RACE ACROSS THE PEAKS</h1>
-        <div class="contents">
-          Join fellow explorers, adventurers, and supporters of scientific
-          research, conservation, and community aid for an unforgettable
-          challenge across the Yorkshire Three Peaks. This 24.6-mile endurance
-          event raises vital funds for the Scientific Exploration Society,
-          helping to support pioneering expeditions and meaningful projects
-          around the world. Take on the Peaks, push your limits, and make a real
-          impact.
-        </div>
-        <a href="/register.html" class="btn">Register</a>
-      </div>
-    </section>
-    <!-- ================== Home Hero Area ================== -->
-
-    <!-- ================== Time Area ================== -->
-    <section class="timer">
-      <div class="container">
-        <div class="left">
-          Race day:
-          <div class="date">12/09/2026</div>
-        </div>
-        <div class="right">
+        <div class="inner">
+          <h5 class="tagline">The route</h5>
+          <h2 class="headline font-48">
+            The Yorkshire 3 Peaks are Pen-y-ghent, Whernside and Ingleborough.
+          </h2>
+          <div class="line"></div>
+          <h4 class="sub-headline">
+            The 24.6-mile circular walk, which takes in the mountaintop summits
+            of Pen-y-ghent, Whernside and Ingleborough is known as the Yorkshire
+            3 Peaks Walk or the Yorkshire 3 Peaks Challenge and involves just
+            over 1,600 metres of climbing.
+          </h4>
           <p>
-            Time until <br />
-            the race:
+            These peaks form part of the Pennine range, and encircle the head of
+            the valley of the River Ribble in the Yorkshire Dales National Park.
+            The route is extremely scenic and provides spectacular views over
+            the Yorkshire countryside.
           </p>
-          <div class="countdown" data-timer="12/09/2026 5:30:00 AM">
-            <div class="item">
-              <span id="days"></span><br />
-              <span class="text">Days</span>
-            </div>
-            <div class="item">
-              <span id="hours"></span><br />
-              <span class="text">Hours</span>
-            </div>
-            <div class="item">
-              <span id="minutes"></span><br />
-              <span class="text">Minutes</span>
-            </div>
-            <div class="item">
-              <span id="seconds"></span><br />
-              <span class="text">Seconds</span>
-            </div>
-          </div>
+          <p>
+            While it lasts just one day, this challenge should not be taken
+            lightly as the terrain is extremely varied involving some steep
+            ascents and descents. Participants can expect to almost cover a
+            marathon distance by foot – but in just a matter of hours.
+          </p>
         </div>
       </div>
     </section>
-    <!-- ================== Time Area ================== -->
+    <!-- ================== FAQs ================== -->
 
     <!-- ================== Map Area ================== -->
     <section class="map-area">
@@ -176,242 +149,70 @@
     </section>
     <!-- ================== Map Area ================== -->
 
-    <!-- ================== Award Area ================== -->
-    <section class="award">
+    <section class="default-lock">
       <div class="container">
-        <h2 class="headline">Award categories</h2>
-        <div class="award-grid">
-          <div class="item">
-            <div class="logo">
-              <img src="/assets/team-4.svg" alt="team-4" />
-            </div>
-            <div class="title">Team of 4</div>
-            <div class="wrap">
-              <img src="/assets/clock.svg" alt="" />
-              Fastest Team of 4
-            </div>
-            <div class="wrap">
-              <img src="/assets/euro.svg" alt="" />
-              Team that raised the most
-            </div>
-          </div>
-          <div class="item">
-            <div class="logo">
-              <img src="/assets/solo-female.svg" alt="solo-female" />
-            </div>
-            <div class="title">Solo female</div>
-            <div class="wrap">
-              <img src="/assets/clock.svg" alt="" />
-              Fastest solo female
-            </div>
-            <div class="wrap">
-              <img src="/assets/euro.svg" alt="" />
-              Fastest solo female that raised the most
-            </div>
-          </div>
-          <div class="item">
-            <div class="logo">
-              <img src="/assets/solo-male.svg" alt="solo-male" />
-            </div>
-            <div class="title">Solo male</div>
-            <div class="wrap">
-              <img src="/assets/clock.svg" alt="" />
-              Fastest solo male
-            </div>
-            <div class="wrap">
-              <img src="/assets/euro.svg" alt="" />
-              Fastest solo male that raised the most
-            </div>
-          </div>
-        </div>
+        <h2 class="headline" style="text-align: left">The route</h2>
+        <h3>Section 1</h3>
+        <p>Horton-in-Ribblesdale (OL2 80,72) to Pen-y-ghent Summit (838,734)</p>
+        <p>
+          One kilometre of walking on a minor road, and 2 uphill on a
+          straightforward path are followed by a short section on steep rocky
+          ground to reach the summit of Pen-y-ghent, the first peak.
+        </p>
+        <hr />
+        <h3>Section 2</h3>
+        <p>Pen-y-ghent to High Birkwith (803,772)</p>
+        <p>
+          Six kms of undulating descent lead to High Birkwith. In the old days
+          you could expect to get very muddy in the bogs of Red Moss, but as of
+          2012 the new footpath avoids all of this. Follow the main path as it
+          turns left down the hill, avoiding the right hand option option
+          favoured by bog trotters of old. Walk East on this path for about 3 km
+          before joining the Pennine Way (walking north) for about another 2km.
+          Then take a left at a sign post marked Yorkshire 3 peaks – High
+          Birkwith.
+        </p>
+        <hr />
+        <h3>Section 3</h3>
+        <p>Pen-y-ghent to High Birkwith (803,772)</p>
+        <p>
+          Six kms of undulating descent lead to High Birkwith. In the old days
+          you could expect to get very muddy in the bogs of Red Moss, but as of
+          2012 the new footpath avoids all of this. Follow the main path as it
+          turns left down the hill, avoiding the right hand option option
+          favoured by bog trotters of old. Walk East on this path for about 3 km
+          before joining the Pennine Way (walking north) for about another 2km.
+          Then take a left at a sign post marked Yorkshire 3 peaks – High
+          Birkwith.
+        </p>
+        <hr />
+        <h3>Section 4</h3>
+        <p>Pen-y-ghent to High Birkwith (803,772)</p>
+        <p>
+          Six kms of undulating descent lead to High Birkwith. In the old days
+          you could expect to get very muddy in the bogs of Red Moss, but as of
+          2012 the new footpath avoids all of this. Follow the main path as it
+          turns left down the hill, avoiding the right hand option option
+          favoured by bog trotters of old. Walk East on this path for about 3 km
+          before joining the Pennine Way (walking north) for about another 2km.
+          Then take a left at a sign post marked Yorkshire 3 peaks – High
+          Birkwith.
+        </p>
+        <hr />
+        <h3>Section 5</h3>
+        <p>Pen-y-ghent to High Birkwith (803,772)</p>
+        <p>
+          Six kms of undulating descent lead to High Birkwith. In the old days
+          you could expect to get very muddy in the bogs of Red Moss, but as of
+          2012 the new footpath avoids all of this. Follow the main path as it
+          turns left down the hill, avoiding the right hand option option
+          favoured by bog trotters of old. Walk East on this path for about 3 km
+          before joining the Pennine Way (walking north) for about another 2km.
+          Then take a left at a sign post marked Yorkshire 3 peaks – High
+          Birkwith.
+        </p>
       </div>
     </section>
-    <!-- ================== Award Area ================== -->
-
-    <!-- ================== How to Enter ================== -->
-    <section
-      class="how-to-enter"
-      style="background-image: url(/assets/how-to-enter-bg.jpg)"
-    >
-      <div class="container">
-        <h2 class="headline">How to enter</h2>
-        <div class="how-to-enter-grid">
-          <div class="item">
-            <div class="count">1</div>
-            <h4 class="title">Register</h4>
-            <div class="price">
-              Entry <br />
-              fee: <span>£50</span>
-            </div>
-            <p>Complete our registration form and set your fundraising goal.</p>
-            <a class="btn" href="/register.html">Register</a>
-          </div>
-          <div class="item">
-            <div class="count">2</div>
-            <h4 class="title">Fundraise</h4>
-            <div class="price">
-              Minimum <br />
-              sponsorship: <span>£300</span>
-            </div>
-            <p>
-              Set up your fundraising page and raise a minimum of £300 for SES.
-            </p>
-            <a class="btn" href="/register.html">Register</a>
-          </div>
-          <div class="item">
-            <div class="count">3</div>
-            <h4 class="title">Check eligibility</h4>
-            <div class="contents">
-              <p>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="17.842"
-                  height="15.98"
-                  viewBox="0 0 17.842 15.98"
-                >
-                  <path
-                    id="np_tick_7996563_000000"
-                    d="M20.192,7.9a.962.962,0,0,0-1.327-.3,34.905,34.905,0,0,0-3.678,2.665,33.988,33.988,0,0,0-6.1,6.775c-.4.572-.792,1.145-1.175,1.715Q6.065,16.595,4.2,14.446a.966.966,0,0,0-1.561,1.121c1.357,2.331,2.693,4.684,4.007,7.039a1.65,1.65,0,0,0,2.858.012c.758-1.33,1.453-2.645,2.183-3.9a31.225,31.225,0,0,1,5.061-6.738,32.754,32.754,0,0,1,3.208-2.787.962.962,0,0,0,.24-1.288Z"
-                    transform="translate(-2.499 -7.457)"
-                  />
-                </svg>
-                Solo entrants must be 18+
-              </p>
-              <p>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="17.842"
-                  height="15.98"
-                  viewBox="0 0 17.842 15.98"
-                >
-                  <path
-                    id="np_tick_7996563_000000"
-                    d="M20.192,7.9a.962.962,0,0,0-1.327-.3,34.905,34.905,0,0,0-3.678,2.665,33.988,33.988,0,0,0-6.1,6.775c-.4.572-.792,1.145-1.175,1.715Q6.065,16.595,4.2,14.446a.966.966,0,0,0-1.561,1.121c1.357,2.331,2.693,4.684,4.007,7.039a1.65,1.65,0,0,0,2.858.012c.758-1.33,1.453-2.645,2.183-3.9a31.225,31.225,0,0,1,5.061-6.738,32.754,32.754,0,0,1,3.208-2.787.962.962,0,0,0,.24-1.288Z"
-                    transform="translate(-2.499 -7.457)"
-                  />
-                </svg>
-                Team members 15–75 with at least one adult (18+).
-              </p>
-            </div>
-            <a class="btn" href="#">See full criteria</a>
-          </div>
-          <div class="item">
-            <div class="count">4</div>
-            <h4 class="title">Get the right kit</h4>
-            <p>
-              Lorem ipsum is placeholder text commonly used in the graphic,
-              print, and publishing industries for previewing layouts and visual
-              mockups.
-            </p>
-            <a class="btn" href="/kitlist.html">See kitlist</a>
-          </div>
-          <div class="item">
-            <div class="count">5</div>
-            <h4 class="title">Book accomodation</h4>
-            <p>
-              Lorem ipsum is placeholder text commonly used in the graphic,
-              print, and publishing industries for previewing layouts and visual
-              mockups.
-            </p>
-            <a class="btn" href="#">Accomodation list</a>
-          </div>
-          <div class="item">
-            <div class="count">6</div>
-            <h4 class="title">Disclosure form</h4>
-            <p>
-              Lorem ipsum is placeholder text commonly used in the graphic,
-              print, and publishing industries for previewing layouts and visual
-              mockups.
-            </p>
-            <a class="btn" href="#">Download</a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ================== How to Enter ================== -->
-
-    <!-- ================== Black CTA ================== -->
-    <section class="have-questions">
-      <div class="container">
-        <div class="left">
-          <img src="/assets/cta-image.jpg" alt="cta-image" />
-        </div>
-        <div class="right">
-          <h3>Still have questions?</h3>
-          <div class="contents-wrap">
-            <p>
-              Still have questions? Visit our FAQ <br />
-              page to find out more.
-            </p>
-          </div>
-          <a href="/faq.html" class="btn">See FAQ’s</a>
-        </div>
-      </div>
-    </section>
-    <!-- ================== Black CTA ================== -->
-
-    <!-- ================== Left Image Right Contents ================== -->
-    <section class="left-image-contents">
-      <div class="container">
-        <div class="left">
-          <div class="image-wrap">
-            <img src="/assets/about-ses.jpg" alt="about-ses" />
-          </div>
-        </div>
-        <div class="right">
-          <h2>About SES</h2>
-          <div class="contents">
-            <p>
-              Scientific Exploration Society (SES) is a UK charity (No. 267410)
-              founded in 1969 by Colonel John Blashford-Snell CBE to support
-              scientific exploration and conservation. The Society has conducted
-              over 200 expeditions worldwide, including the youth-focused
-              Operations Drake and Raleigh. Today, SES continues to champion
-              climate research, environmental protection, and community
-              collaboration by providing funding, mentoring, training, and
-              endorsement for field expeditions. Members enjoy talks, events,
-              and opportunities to join SES-endorsed projects. Its Advisory
-              Board includes leading explorers such as Sir Ranulph Fiennes, Bear
-              Grylls, Steve Backshall, Tim Peake, and others.
-            </p>
-          </div>
-          <div class="btns-wrap">
-            <a href="/about-ses.html" class="btn">Read more</a>
-            <a href="https://ses-explore.org/" target="_blank" class="link"
-              >SES website ses-explore.org</a
-            >
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ================== Left Image Right Contents ================== -->
-    <!-- ================== Left Image Right Contents ================== -->
-    <section class="left-image-contents why-involved">
-      <div class="container">
-        <div class="left">
-          <h2>Why get involved?</h2>
-          <div class="contents">
-            <p>
-              By taking part in the SES charity challenge, you’ll push yourself
-              in an inspiring adventure while directly supporting vital
-              scientific exploration, conservation, and community aid around the
-              world. It’s a chance to test your endurance, connect with
-              like-minded people, and make a meaningful contribution to
-              protecting our planet and improving lives.
-            </p>
-          </div>
-          <div class="btns-wrap">
-            <a href="#" class="btn">Read more</a>
-          </div>
-        </div>
-        <div class="right">
-          <div class="image-wrap">
-            <img src="/assets/why-involve.jpg" alt="why-involve" />
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ================== Left Image Right Contents ================== -->
 
     <!-- ================== Footer Area ================== -->
     <footer class="main-footer">
