--- a/where-do-stay.html
+++ b/where-do-stay.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Race Across The Peaks</title>
+    <title>Race Across The Peaks - About SES</title>
     <link rel="stylesheet" href="/style.css" />
     <link
       rel="stylesheet"
@@ -70,348 +70,46 @@
           <a href="/about-race.html">About the race</a>
           <a href="/kitlist.html">Kit list</a>
           <a href="/faq.html">FAQ</a>
-          <a href="/register.html">Get in touch</a>
-          <a href="/register.html" class="btn">Register</a>
+          <a href="/">Get in touch</a>
+          <a href="/" class="btn">Register</a>
         </div>
       </div>
     </header>
     <!-- ================== Header Area ================== -->
 
-    <!-- ================== Home Hero Area ================== -->
+    <!-- ================== FAQs ================== -->
     <section
-      class="home-hero"
-      style="background-image: url(/assets/hero-bg.jpg)"
+      class="inner-hero"
+      style="
+        background-image: url(/assets/Ribblehead-Image-Yorkshire-Dales.jpg);
+      "
     >
       <div class="container">
-        <div class="logo">
-          <img src="/assets/cc-logo.png" alt="cc-logo" />
+        <div class="inner">
+          <h2 class="headline">Where do I stay?</h2>
+          <div class="line"></div>
+          <h4 class="sub-headline">
+            Whether you’re tackling the Yorkshire Three Peaks Challenge in a
+            single day or spreading it out over a leisurely weekend, there are
+            plenty of excellent accommodation options to suit every type of
+            walker. From cosy country inns to budget-friendly bunkhouses, the
+            area surrounding Pen-y-ghent, Whernside and Ingleborough offers a
+            warm welcome and a good night’s rest after a day on the fells.
+          </h4>
         </div>
-        <h1 class="headline">RACE ACROSS THE PEAKS</h1>
-        <div class="contents">
-          Join fellow explorers, adventurers, and supporters of scientific
-          research, conservation, and community aid for an unforgettable
-          challenge across the Yorkshire Three Peaks. This 24.6-mile endurance
-          event raises vital funds for the Scientific Exploration Society,
-          helping to support pioneering expeditions and meaningful projects
-          around the world. Take on the Peaks, push your limits, and make a real
-          impact.
-        </div>
-        <a href="/register.html" class="btn">Register</a>
       </div>
     </section>
-    <!-- ================== Home Hero Area ================== -->
+    <!-- ================== FAQs ================== -->
 
-    <!-- ================== Time Area ================== -->
-    <section class="timer">
+    <section class="sub-navigation">
       <div class="container">
-        <div class="left">
-          Race day:
-          <div class="date">12/09/2026</div>
-        </div>
-        <div class="right">
-          <p>
-            Time until <br />
-            the race:
-          </p>
-          <div class="countdown" data-timer="12/09/2026 5:30:00 AM">
-            <div class="item">
-              <span id="days"></span><br />
-              <span class="text">Days</span>
-            </div>
-            <div class="item">
-              <span id="hours"></span><br />
-              <span class="text">Hours</span>
-            </div>
-            <div class="item">
-              <span id="minutes"></span><br />
-              <span class="text">Minutes</span>
-            </div>
-            <div class="item">
-              <span id="seconds"></span><br />
-              <span class="text">Seconds</span>
-            </div>
-          </div>
-        </div>
+        <a href="#">1. Pubs</a>
+        <a href="#">2. Bed and Breakfasts </a>
+        <a href="#">3. Camping</a>
+        <a href="#">4. Hostels and bunkhouses</a>
+        <a href="#">5. Holiday cottages</a>
       </div>
     </section>
-    <!-- ================== Time Area ================== -->
-
-    <!-- ================== Map Area ================== -->
-    <section class="map-area">
-      <div class="race-status">
-        <p>Race stats:</p>
-        <p class="m"><span>24.6</span>miles</p>
-        <p class="m"><span>5,200</span>metres ascent</p>
-      </div>
-      <div class="race-start">
-        <p>Starting point:</p>
-        <h4>
-          Cafe at <br />
-          Horton in <br />
-          Ribblesdale
-        </h4>
-      </div>
-      <iframe
-        width="100%"
-        height="900"
-        frameborder="0"
-        src="https://api.mapbox.com/styles/v1/festoonstudios/cmhaj5cyk002n01sj7vmqdplg.html?title=false&access_token=pk.eyJ1IjoiZmVzdG9vbnN0dWRpb3MiLCJhIjoiY2pnaGpiaW4wMGFycjJ3bXB5enF0Z2w2YSJ9.D8JS4tLYxB5nqowy-9c98w&zoomwheel=false#10.8/54.1876/-2.3309"
-        allowfullscreen
-      >
-      </iframe>
-      <div class="left-overlap">
-        <h3>The route</h3>
-        <p>Departure from: [name] café at Horton in Ribblesdale.</p>
-        <p>Staggered departures between 6.00 – 7.30am.</p>
-        <p>Competitors will be advised of their start times.</p>
-        <p>
-          All team members must wear the official SES Race Across The Peaks Race
-          Bib (for identification purposes).
-        </p>
-        <p>
-          Winners will be presented their awards at the Oscars of Exploration
-          which is held annually the Royal College of Surgeons.
-        </p>
-      </div>
-    </section>
-    <!-- ================== Map Area ================== -->
-
-    <!-- ================== Award Area ================== -->
-    <section class="award">
-      <div class="container">
-        <h2 class="headline">Award categories</h2>
-        <div class="award-grid">
-          <div class="item">
-            <div class="logo">
-              <img src="/assets/team-4.svg" alt="team-4" />
-            </div>
-            <div class="title">Team of 4</div>
-            <div class="wrap">
-              <img src="/assets/clock.svg" alt="" />
-              Fastest Team of 4
-            </div>
-            <div class="wrap">
-              <img src="/assets/euro.svg" alt="" />
-              Team that raised the most
-            </div>
-          </div>
-          <div class="item">
-            <div class="logo">
-              <img src="/assets/solo-female.svg" alt="solo-female" />
-            </div>
-            <div class="title">Solo female</div>
-            <div class="wrap">
-              <img src="/assets/clock.svg" alt="" />
-              Fastest solo female
-            </div>
-            <div class="wrap">
-              <img src="/assets/euro.svg" alt="" />
-              Fastest solo female that raised the most
-            </div>
-          </div>
-          <div class="item">
-            <div class="logo">
-              <img src="/assets/solo-male.svg" alt="solo-male" />
-            </div>
-            <div class="title">Solo male</div>
-            <div class="wrap">
-              <img src="/assets/clock.svg" alt="" />
-              Fastest solo male
-            </div>
-            <div class="wrap">
-              <img src="/assets/euro.svg" alt="" />
-              Fastest solo male that raised the most
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ================== Award Area ================== -->
-
-    <!-- ================== How to Enter ================== -->
-    <section
-      class="how-to-enter"
-      style="background-image: url(/assets/how-to-enter-bg.jpg)"
-    >
-      <div class="container">
-        <h2 class="headline">How to enter</h2>
-        <div class="how-to-enter-grid">
-          <div class="item">
-            <div class="count">1</div>
-            <h4 class="title">Register</h4>
-            <div class="price">
-              Entry <br />
-              fee: <span>£50</span>
-            </div>
-            <p>Complete our registration form and set your fundraising goal.</p>
-            <a class="btn" href="/register.html">Register</a>
-          </div>
-          <div class="item">
-            <div class="count">2</div>
-            <h4 class="title">Fundraise</h4>
-            <div class="price">
-              Minimum <br />
-              sponsorship: <span>£300</span>
-            </div>
-            <p>
-              Set up your fundraising page and raise a minimum of £300 for SES.
-            </p>
-            <a class="btn" href="/register.html">Register</a>
-          </div>
-          <div class="item">
-            <div class="count">3</div>
-            <h4 class="title">Check eligibility</h4>
-            <div class="contents">
-              <p>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="17.842"
-                  height="15.98"
-                  viewBox="0 0 17.842 15.98"
-                >
-                  <path
-                    id="np_tick_7996563_000000"
-                    d="M20.192,7.9a.962.962,0,0,0-1.327-.3,34.905,34.905,0,0,0-3.678,2.665,33.988,33.988,0,0,0-6.1,6.775c-.4.572-.792,1.145-1.175,1.715Q6.065,16.595,4.2,14.446a.966.966,0,0,0-1.561,1.121c1.357,2.331,2.693,4.684,4.007,7.039a1.65,1.65,0,0,0,2.858.012c.758-1.33,1.453-2.645,2.183-3.9a31.225,31.225,0,0,1,5.061-6.738,32.754,32.754,0,0,1,3.208-2.787.962.962,0,0,0,.24-1.288Z"
-                    transform="translate(-2.499 -7.457)"
-                  />
-                </svg>
-                Solo entrants must be 18+
-              </p>
-              <p>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="17.842"
-                  height="15.98"
-                  viewBox="0 0 17.842 15.98"
-                >
-                  <path
-                    id="np_tick_7996563_000000"
-                    d="M20.192,7.9a.962.962,0,0,0-1.327-.3,34.905,34.905,0,0,0-3.678,2.665,33.988,33.988,0,0,0-6.1,6.775c-.4.572-.792,1.145-1.175,1.715Q6.065,16.595,4.2,14.446a.966.966,0,0,0-1.561,1.121c1.357,2.331,2.693,4.684,4.007,7.039a1.65,1.65,0,0,0,2.858.012c.758-1.33,1.453-2.645,2.183-3.9a31.225,31.225,0,0,1,5.061-6.738,32.754,32.754,0,0,1,3.208-2.787.962.962,0,0,0,.24-1.288Z"
-                    transform="translate(-2.499 -7.457)"
-                  />
-                </svg>
-                Team members 15–75 with at least one adult (18+).
-              </p>
-            </div>
-            <a class="btn" href="#">See full criteria</a>
-          </div>
-          <div class="item">
-            <div class="count">4</div>
-            <h4 class="title">Get the right kit</h4>
-            <p>
-              Lorem ipsum is placeholder text commonly used in the graphic,
-              print, and publishing industries for previewing layouts and visual
-              mockups.
-            </p>
-            <a class="btn" href="/kitlist.html">See kitlist</a>
-          </div>
-          <div class="item">
-            <div class="count">5</div>
-            <h4 class="title">Book accomodation</h4>
-            <p>
-              Lorem ipsum is placeholder text commonly used in the graphic,
-              print, and publishing industries for previewing layouts and visual
-              mockups.
-            </p>
-            <a class="btn" href="#">Accomodation list</a>
-          </div>
-          <div class="item">
-            <div class="count">6</div>
-            <h4 class="title">Disclosure form</h4>
-            <p>
-              Lorem ipsum is placeholder text commonly used in the graphic,
-              print, and publishing industries for previewing layouts and visual
-              mockups.
-            </p>
-            <a class="btn" href="#">Download</a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ================== How to Enter ================== -->
-
-    <!-- ================== Black CTA ================== -->
-    <section class="have-questions">
-      <div class="container">
-        <div class="left">
-          <img src="/assets/cta-image.jpg" alt="cta-image" />
-        </div>
-        <div class="right">
-          <h3>Still have questions?</h3>
-          <div class="contents-wrap">
-            <p>
-              Still have questions? Visit our FAQ <br />
-              page to find out more.
-            </p>
-          </div>
-          <a href="/faq.html" class="btn">See FAQ’s</a>
-        </div>
-      </div>
-    </section>
-    <!-- ================== Black CTA ================== -->
-
-    <!-- ================== Left Image Right Contents ================== -->
-    <section class="left-image-contents">
-      <div class="container">
-        <div class="left">
-          <div class="image-wrap">
-            <img src="/assets/about-ses.jpg" alt="about-ses" />
-          </div>
-        </div>
-        <div class="right">
-          <h2>About SES</h2>
-          <div class="contents">
-            <p>
-              Scientific Exploration Society (SES) is a UK charity (No. 267410)
-              founded in 1969 by Colonel John Blashford-Snell CBE to support
-              scientific exploration and conservation. The Society has conducted
-              over 200 expeditions worldwide, including the youth-focused
-              Operations Drake and Raleigh. Today, SES continues to champion
-              climate research, environmental protection, and community
-              collaboration by providing funding, mentoring, training, and
-              endorsement for field expeditions. Members enjoy talks, events,
-              and opportunities to join SES-endorsed projects. Its Advisory
-              Board includes leading explorers such as Sir Ranulph Fiennes, Bear
-              Grylls, Steve Backshall, Tim Peake, and others.
-            </p>
-          </div>
-          <div class="btns-wrap">
-            <a href="/about-ses.html" class="btn">Read more</a>
-            <a href="https://ses-explore.org/" target="_blank" class="link"
-              >SES website ses-explore.org</a
-            >
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ================== Left Image Right Contents ================== -->
-    <!-- ================== Left Image Right Contents ================== -->
-    <section class="left-image-contents why-involved">
-      <div class="container">
-        <div class="left">
-          <h2>Why get involved?</h2>
-          <div class="contents">
-            <p>
-              By taking part in the SES charity challenge, you’ll push yourself
-              in an inspiring adventure while directly supporting vital
-              scientific exploration, conservation, and community aid around the
-              world. It’s a chance to test your endurance, connect with
-              like-minded people, and make a meaningful contribution to
-              protecting our planet and improving lives.
-            </p>
-          </div>
-          <div class="btns-wrap">
-            <a href="#" class="btn">Read more</a>
-          </div>
-        </div>
-        <div class="right">
-          <div class="image-wrap">
-            <img src="/assets/why-involve.jpg" alt="why-involve" />
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ================== Left Image Right Contents ================== -->
 
     <!-- ================== Footer Area ================== -->
     <footer class="main-footer">
