--- a/where-do-stay.html
+++ b/where-do-stay.html
@@ -103,11 +103,431 @@
 
     <section class="sub-navigation">
       <div class="container">
-        <a href="#">1. Pubs</a>
-        <a href="#">2. Bed and Breakfasts </a>
-        <a href="#">3. Camping</a>
-        <a href="#">4. Hostels and bunkhouses</a>
-        <a href="#">5. Holiday cottages</a>
+        <a href="#pubs">1. Pubs</a>
+        <a href="#beds-breakfasts">2. Bed and Breakfasts </a>
+        <a href="#camping">3. Camping</a>
+        <a href="#bunkhouses">4. Hostels and bunkhouses</a>
+        <a href="#cottages">5. Holiday cottages</a>
+      </div>
+    </section>
+
+    <section class="places-to-stays" id="pubs">
+      <div class="container">
+        <div class="top-area">
+          <h3 class="headline">1. Traditional Inns and Pubs</h3>
+          <div class="descriptions">
+            <p>
+              Villages such as Horton-in-Ribblesdale, Ribblehead and
+              Chapel-le-Dale are home to characterful pubs and inns offering
+              hearty meals, local ales, and comfortable rooms. These make an
+              ideal base for early starts and easy access to the peaks.
+            </p>
+          </div>
+        </div>
+        <div class="places-address-grid">
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="divider"></div>
+    <section class="places-to-stays" id="beds-breakfasts">
+      <div class="container">
+        <div class="top-area">
+          <h3 class="headline">2. Bed and Breakfasts and Guesthouses</h3>
+          <div class="descriptions">
+            <p>
+              If you prefer a homely touch, there’s an excellent range of B&Bs
+              and guesthouses dotted throughout the Three Peaks area. Expect
+              friendly hosts, home-cooked breakfasts, and helpful local advice
+              for your walk.
+            </p>
+          </div>
+        </div>
+        <div class="places-address-grid">
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="divider"></div>
+    <section class="places-to-stays" id="camping">
+      <div class="container">
+        <div class="top-area">
+          <h3 class="headline">3. Camping</h3>
+          <div class="descriptions">
+            <p>
+              Villages such as Horton-in-Ribblesdale, Ribblehead and
+              Chapel-le-Dale are home to characterful pubs and inns offering
+              hearty meals, local ales, and comfortable rooms. These make an
+              ideal base for early starts and easy access to the peaks.
+            </p>
+          </div>
+        </div>
+        <div class="places-address-grid">
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="divider"></div>
+    <section class="places-to-stays" id="bunkhouses">
+      <div class="container">
+        <div class="top-area">
+          <h3 class="headline">4. Hostels and bunkhouses</h3>
+          <div class="descriptions">
+            <p>
+              Villages such as Horton-in-Ribblesdale, Ribblehead and
+              Chapel-le-Dale are home to characterful pubs and inns offering
+              hearty meals, local ales, and comfortable rooms. These make an
+              ideal base for early starts and easy access to the peaks.
+            </p>
+          </div>
+        </div>
+        <div class="places-address-grid">
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="divider"></div>
+    <section class="places-to-stays" id="cottages">
+      <div class="container">
+        <div class="top-area">
+          <h3 class="headline">5. Holiday cottages</h3>
+          <div class="descriptions">
+            <p>
+              Villages such as Horton-in-Ribblesdale, Ribblehead and
+              Chapel-le-Dale are home to characterful pubs and inns offering
+              hearty meals, local ales, and comfortable rooms. These make an
+              ideal base for early starts and easy access to the peaks.
+            </p>
+          </div>
+        </div>
+        <div class="places-address-grid">
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+          <div class="item">
+            <h6>The Crown Hotel</h6>
+            <p>
+              <strong>Name:</strong> The Crown Hotel <br />
+              <strong>Distance:</strong> 0 miles<br />
+              <strong>Website:</strong>
+              <a href="http://www.crown-hotel.co.uk/" target="_blank"
+                >http://www.crown-hotel.co.uk/</a
+              >
+            </p>
+          </div>
+        </div>
       </div>
     </section>
 
