--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="logo">
           <img src="/assets/cc-logo.png" alt="cc-logo" />
         </div>
-        <h1 class="headline">RACE ACROSS THE PEAKS</h1>
+        <h1 class="headline">RACE ACROSS <br />THE PEAKS</h1>
         <div class="contents">
           Join fellow explorers, adventurers, and supporters of scientific
           research, conservation, and community aid for an unforgettable
@@ -182,45 +182,57 @@
         <h2 class="headline">Award categories</h2>
         <div class="award-grid">
           <div class="item">
-            <div class="logo">
-              <img src="/assets/team-4.svg" alt="team-4" />
+            <div class="top">
+              <div class="logo">
+                <img src="/assets/team-4.svg" alt="team-4" />
+              </div>
+              <div class="title">Team of 4</div>
             </div>
-            <div class="title">Team of 4</div>
-            <div class="wrap">
-              <img src="/assets/clock.svg" alt="" />
-              Fastest Team of 4
-            </div>
-            <div class="wrap">
-              <img src="/assets/euro.svg" alt="" />
-              Team that raised the most
-            </div>
-          </div>
-          <div class="item">
-            <div class="logo">
-              <img src="/assets/solo-female.svg" alt="solo-female" />
-            </div>
-            <div class="title">Solo female</div>
-            <div class="wrap">
-              <img src="/assets/clock.svg" alt="" />
-              Fastest solo female
-            </div>
-            <div class="wrap">
-              <img src="/assets/euro.svg" alt="" />
-              Fastest solo female that raised the most
+            <div class="bottom">
+              <div class="wrap">
+                <img src="/assets/clock.svg" alt="" />
+                Fastest Team of 4
+              </div>
+              <div class="wrap">
+                <img src="/assets/euro.svg" alt="" />
+                Team that raised the most
+              </div>
             </div>
           </div>
           <div class="item">
-            <div class="logo">
-              <img src="/assets/solo-male.svg" alt="solo-male" />
+            <div class="top">
+              <div class="logo">
+                <img src="/assets/solo-female.svg" alt="solo-female" />
+              </div>
+              <div class="title">Solo female</div>
             </div>
-            <div class="title">Solo male</div>
-            <div class="wrap">
-              <img src="/assets/clock.svg" alt="" />
-              Fastest solo male
+            <div class="bottom">
+              <div class="wrap">
+                <img src="/assets/clock.svg" alt="" />
+                Fastest solo female
+              </div>
+              <div class="wrap">
+                <img src="/assets/euro.svg" alt="" />
+                Fastest solo female that raised the most
+              </div>
             </div>
-            <div class="wrap">
-              <img src="/assets/euro.svg" alt="" />
-              Fastest solo male that raised the most
+          </div>
+          <div class="item">
+            <div class="top">
+              <div class="logo">
+                <img src="/assets/solo-male.svg" alt="solo-male" />
+              </div>
+              <div class="title">Solo male</div>
+            </div>
+            <div class="bottom">
+              <div class="wrap">
+                <img src="/assets/clock.svg" alt="" />
+                Fastest solo male
+              </div>
+              <div class="wrap">
+                <img src="/assets/euro.svg" alt="" />
+                Fastest solo male that raised the most
+              </div>
             </div>
           </div>
         </div>
