--- a/the-route.html
+++ b/the-route.html
@@ -66,15 +66,36 @@
           </svg>
           Race across <br />the peaks</a
         >
-        <div class="menu-wrap">
-          <a href="/about-race.html">About the race</a>
-          <a href="/kitlist.html">Kit list</a>
-          <a href="/faq.html">FAQ</a>
-          <a href="/">Get in touch</a>
-          <a href="/" class="btn">Register</a>
+        <div class="right">
+          <div class="menu-wrap">
+            <a href="/about-race.html">About the race</a>
+            <a href="/kitlist.html">Kit list</a>
+            <a href="/faq.html">FAQ</a>
+            <a href="/register.html">Get in touch</a>
+            <a href="/register.html" class="btn">Register</a>
+          </div>
+          <div class="menu-trigger">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
         </div>
       </div>
     </header>
+    <div class="mobile-menu-wrap" style="display: none">
+      <div class="inner">
+        <div class="menu-wrap">
+          <li><a href="/about-race.html">About the race</a></li>
+          <li><a href="/about-ses.html">About SES</a></li>
+          <li><a href="/kitlist.html">Kit list</a></li>
+          <li><a href="/faq.html">FAQ</a></li>
+          <li><a href="/register.html">Get in touch</a></li>
+          <li><a href="/the-route.html">The Route</a></li>
+          <li><a href="/where-do-stay.html">Where Do I Stay?</a></li>
+          <li><a href="/register.html" class="btn">Register</a></li>
+        </div>
+      </div>
+    </div>
     <!-- ================== Header Area ================== -->
 
     <!-- ================== FAQs ================== -->
